--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-share": "^0.24.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "swiper": "^10.0.4"
   }
 }
