--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.40.0",
     "next": "13.4.7",
     "next-share": "^0.24.0",
     "react": "18.2.0",
